--- a/backend/package.json
+++ b/backend/package.json
@@ -1,20 +1,42 @@
 {
-  "name": "backend",
+  "name": "moneywise-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Backend API pour l'application MoneyWise - Gestion des finances personnelles",
+  "main": "src/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:api": "node test-api.js",
+    "db:init": "psql -U postgres -d moneywise -f src/database/init.sql",
+    "db:create": "createdb -U postgres moneywise",
+    "db:seed": "psql -U postgres -d moneywise -f src/database/seed.sql",
+    "db:reset": "dropdb -U postgres moneywise && npm run db:create && npm run db:init && npm run db:seed"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "finance",
+    "budget",
+    "expenses",
+    "income",
+    "api",
+    "nodejs",
+    "express"
+  ],
+  "author": "MoneyWise Team",
+  "license": "MIT",
   "dependencies": {
+    "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
