--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "test:api": "node test-api.js",
     "test:categories": "node test-categories.js",
+    "test:transactions": "node test-transactions.js",
     "db:init": "psql -U postgres -d moneywise -f src/database/init.sql",
     "db:init-render": "node init-db-render.js",
     "db:create": "createdb -U postgres moneywise",
