🔧 Mise à jour .gitignore pour exclure tous les fichiers de test et Postman

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -65,11 +65,35 @@ Thumbs.db
 *.tmp
 *.temp
 
-# Test files
+# Test files and local development files
 test-*.js
 *test*.js
+diagnostic-*.js
+ajouter-*.js
+init-db-*.js
+verifier-*.js
+reinitialiser-*.js
+nettoyer-*.js
+corriger-*.js
+tester-*.js
+test-*.js
+*test*.js
+
+# Documentation files (local development)
 DOCUMENTATION_*.md
 FRONTEND_DOCUMENTATION.md
-MoneyWise_Postman_Collection*.json
-verifier-utilisateurs.js
 TESTS_LOCAUX.md
+README_Postman.md
+CONFIGURATION_EMAIL.md
+tests-postman-corriges.md
+RESUME_CORRECTIONS_POSTMAN.md
+
+# Postman collections (local development)
+MoneyWise_Postman_Collection*.json
+MoneyWise-API*.json
+*postman*.json
+
+# Local configuration files
+.env.example
+
+# Local development files
