preparation et ajout dans le gitignore

--- a/backend/env.example
+++ b/backend/env.example
@@ -16,5 +16,10 @@ JWT_SECRET=votre_secret_jwt_tres_securise_ici
 # Configuration CORS
 FRONTEND_URL=http://localhost:5173
 
+# Configuration Email (pour la récupération de mot de passe)
+EMAIL_SERVICE=gmail
+EMAIL_USER=votre_email@gmail.com
+EMAIL_PASSWORD=votre_mot_de_passe_application
+
 # Configuration des logs
 LOG_LEVEL=info
