ajout de la fonctionnalite mot de pas oublie teste reussi

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -87,6 +87,7 @@ README_Postman.md
 CONFIGURATION_EMAIL.md
 tests-postman-corriges.md
 RESUME_CORRECTIONS_POSTMAN.md
+CORRECTIONS_FRANCISATION.md
 
 # Postman collections (local development)
 MoneyWise_Postman_Collection*.json
