--- a/backend/package.json
+++ b/backend/package.json
@@ -10,17 +10,22 @@
     "test:api": "node test-api.js",
     "test:categories": "node test-categories.js",
     "test:transactions": "node test-transactions.js",
-    "test:email": "node test-email.js",
+    "test:verification-email": "node test-verification-email.js",
     "diagnostic:email": "node diagnostic-email.js",
+    "db:update-locale": "node mise-a-jour-db-locale.js",
+    "db:check-locale": "node verifier-db-locale.js",
     "test:email-direct": "node test-email-direct.js",
     "test:forgot-password": "node test-forgot-password.js",
     "test:api-forgot-password": "node test-api-forgot-password.js",
     "db:init": "node init-db-local.js",
     "db:add-tokens": "node ajouter-table-tokens.js",
+    "db:add-tokens-render": "node ajouter-table-tokens-render.js",
+    "db:verifier-tables-render": "node verifier-tables-render.js",
     "db:init-render": "node init-db-render.js",
     "db:create": "createdb -U postgres moneywise",
     "db:seed": "psql -U postgres -d moneywise -f src/database/seed.sql",
-    "db:reset": "dropdb -U postgres moneywise && npm run db:create && npm run db:init && npm run db:seed"
+    "db:reset": "dropdb -U postgres moneywise && npm run db:create && npm run db:init && npm run db:seed",
+    "test:cors": "node test-cors-vercel.js"
   },
   "keywords": [
     "finance",
