ajout de la fonctionnalite photo profil

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -90,6 +90,13 @@ RESUME_CORRECTIONS_POSTMAN.md
 CORRECTIONS_FRANCISATION.md
 ANALYSE_SECURITE_ET_VALIDATION.md
 CONFIGURATION_CORS_VERCEL.md
+GUIDE_DEPLOIEMENT_RENDER_CLOUDINARY.md
+GUIDE_INTEGRATION_VERIFICATION_EMAIL.md
+RESUME_IMPLEMENTATION_PHOTO_PROFIL.md
+RESUME_INTEGRATION_DEVELOPPEURS.md
+TEMPLATE_EMAIL_VERIFICATION.md
+migrer-vers-cloudinary.js
+
 
 
 # Postman collections (local development)
@@ -106,3 +113,6 @@ SWAGGER_DOCUMENTATION.md
 .env.example
 
 # Local development files
+
+# Uploaded files
+uploads/
