--- a/backend/env.example
+++ b/backend/env.example
@@ -3,23 +3,22 @@ PORT=3000
 NODE_ENV=development
 
 # Configuration de la base de données PostgreSQL
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=moneywise
-DB_USER=postgres
-DB_PASSWORD=password
+DATABASE_URL=postgresql://username:password@localhost:5432/moneywise
 
 # Configuration JWT
+JWT_SECRET=your_jwt_secret_key_here
 
-JWT_SECRET=votre_secret_jwt_tres_securise_ici
+# Configuration email (Gmail)
+EMAIL_USER=your_email@gmail.com
+EMAIL_PASS=your_app_password_here
 
 # Configuration CORS
 FRONTEND_URL=http://localhost:5173
 
-# Configuration Email (pour la récupération de mot de passe)
-EMAIL_SERVICE=gmail
-EMAIL_USER=votre_email@gmail.com
-EMAIL_PASSWORD=votre_mot_de_passe_application
+# Configuration Cloudinary (pour la production)
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
 
 # Configuration des logs
 LOG_LEVEL=info
