--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,9 @@
     "db:create": "createdb -U postgres moneywise",
     "db:seed": "psql -U postgres -d moneywise -f src/database/seed.sql",
     "db:reset": "dropdb -U postgres moneywise && npm run db:create && npm run db:init && npm run db:seed",
-    "test:cors": "node test-cors-vercel.js"
+    "test:cors": "node test-cors-vercel.js",
+    "test:url-config": "node test-url-config.js",
+    "test:dev-urls": "node test-dev-urls.js"
   },
   "keywords": [
     "finance",
@@ -47,6 +49,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.5",
     "pg": "^8.16.3",
     "swagger-jsdoc": "^6.2.8",
