debug sur multer et cloudinary

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -96,6 +96,11 @@ RESUME_IMPLEMENTATION_PHOTO_PROFIL.md
 RESUME_INTEGRATION_DEVELOPPEURS.md
 TEMPLATE_EMAIL_VERIFICATION.md
 migrer-vers-cloudinary.js
+RESUME_IMPLEMENTATION_PHOTO_PROFIL.md
+TEST_PHOTO_PROFIL.md
+
+
+
 
 
 
