--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,8 @@
     "db:reset": "dropdb -U postgres moneywise && npm run db:create && npm run db:init && npm run db:seed",
     "test:cors": "node test-cors-vercel.js",
     "test:url-config": "node test-url-config.js",
-    "test:dev-urls": "node test-dev-urls.js"
+    "test:dev-urls": "node test-dev-urls.js",
+    "db:remove-theme": "node supprimer-colonne-theme.js"
   },
   "keywords": [
     "finance",
@@ -44,6 +45,7 @@
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.0.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
