--- a/backend/package.json
+++ b/backend/package.json
@@ -28,7 +28,9 @@
     "test:cors": "node test-cors-vercel.js",
     "test:url-config": "node test-url-config.js",
     "test:dev-urls": "node test-dev-urls.js",
-    "db:remove-theme": "node supprimer-colonne-theme.js"
+    "db:remove-theme": "node supprimer-colonne-theme.js",
+    "db:migrate-hybride": "node migrer-type-hybride.js",
+    "test:hybride": "node test-type-hybride.js"
   },
   "keywords": [
     "finance",
