--- a/backend/package.json
+++ b/backend/package.json
@@ -30,7 +30,11 @@
     "test:dev-urls": "node test-dev-urls.js",
     "db:remove-theme": "node supprimer-colonne-theme.js",
     "db:migrate-hybride": "node migrer-type-hybride.js",
-    "test:hybride": "node test-type-hybride.js"
+    "test:hybride": "node test-type-hybride.js",
+    "test:export-pdf": "node test-export-pdf.js",
+    "test:export-design": "node test-export-pdf-design.js",
+    "test:notifications": "node test-notifications.js",
+    "test:alertes-frontend": "node test-alertes-frontend.js"
   },
   "keywords": [
     "finance",
