--- a/backend/package.json
+++ b/backend/package.json
@@ -31,10 +31,7 @@
     "db:remove-theme": "node supprimer-colonne-theme.js",
     "db:migrate-hybride": "node migrer-type-hybride.js",
     "test:hybride": "node test-type-hybride.js",
-    "test:export-pdf": "node test-export-pdf.js",
-    "test:export-design": "node test-export-pdf-design.js",
-    "test:notifications": "node test-notifications.js",
-    "test:alertes-frontend": "node test-alertes-frontend.js"
+    "test:export-pdf-complet": "node test-export-pdf-complet.js"
   },
   "keywords": [
     "finance",
