--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -131,6 +131,15 @@ test-seuil-*.js
 test-personnalisees-*.js
 verification-*.js
 correction-*.js
+documentation-generator.js
+RAPPORT_GENERATION_DOCUMENTS_PDF.md
+RAPPORT_FINAL_CORRECTION_FORMATAGE_MONTANTS.md
+generer-et-analyser-pdf.js
+test-formater-montant-direct.js
+test-pdf-direct.js
+analyser-pdf.js
+verifier-donnees-bd.js
+test-export-json.js
 
 # Local configuration files
 .env.example
