--- a/backend/package.json
+++ b/backend/package.json
@@ -79,3 +79,16 @@
     "node": ">=16.0.0"
   }
 }
+
+    "nodemailer": "^7.0.5",
+    "pg": "^8.16.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  },
+  "engines": {
+    "node": ">=16.0.0"
+  }
+}
