Rename service from 'moneywise-backend' to 'moneywise-project'

--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: moneywise-backend
+    name: moneywise-project
     env: node
     plan: free
     buildCommand: npm install
