ajout des variable supplementaire pour le maillong

--- a/env.example
+++ b/env.example
@@ -9,6 +9,12 @@ DATABASE_URL=postgresql://username:password@localhost:5432/moneywise
 JWT_SECRET=your_jwt_secret_key_here
 
 # Configuration email (Gmail)
+# Option 1: Via Service (plus simple)
+# EMAIL_SERVICE=gmail
+# Option 2: Via Hôte/Port (plus robuste pour la production)
+# EMAIL_HOST=smtp.gmail.com
+# EMAIL_PORT=587
+# EMAIL_SECURE=false
 EMAIL_USER=your_email@gmail.com
 EMAIL_PASS=your_app_password_here
 
